metering/kustomize/overlays/dev/base/generated/victoriametrics/templates/vmselect/dep-sts.yaml
---
# Source: victoriametrics/templates/vmselect/dep-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metering-victoriametrics-vmselect
  namespace: "metering"
  labels:
    app.kubernetes.io/instance: metering
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoriametrics
    app.kubernetes.io/version: 1.124.0
    helm.sh/chart: victoriametrics-0.1.31
    app.kubernetes.io/part-of: victoriametrics
    app.kubernetes.io/component: vmselect
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: metering
      app.kubernetes.io/name: victoriametrics
      app.kubernetes.io/component: vmselect
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: metering
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoriametrics
        app.kubernetes.io/version: 1.124.0
        helm.sh/chart: victoriametrics-0.1.31
        app.kubernetes.io/part-of: victoriametrics
        app.kubernetes.io/component: vmselect
    spec:
      serviceAccountName: metering-victoriametrics-vmselect
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: metering
                    app.kubernetes.io/name: victoriametrics
                    app.kubernetes.io/component: vmselect
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: vmselect
          image: victoriametrics/vmselect:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - --envflag.enable
            - --envflag.prefix=VM_
            - --loggerFormat=json
            - --cacheDataPath=/cache
            - --httpListenAddr=:8481
            - --storageNode=metering-victoriametrics-vmstorage-0.metering-victoriametrics-vmstorage-headless:8401
            - --storageNode=metering-victoriametrics-vmstorage-1.metering-victoriametrics-vmstorage-headless:8401
            - --storageNode=metering-victoriametrics-vmstorage-2.metering-victoriametrics-vmstorage-headless:8401
            - -search.maxQueryDuration=5m
            - -search.maxConcurrentRequests=16
            - -dedup.minScrapeInterval=1s
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8481
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: empty-dir
              mountPath: /cache
              subPath: app-cache-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
